moved CCF to tag 0.9.2. Improved Build and Install documentation for PDO TP
Signed-off-by: prakashngit <prakash.narayana.moorthy@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ docker/sgx
 make.log
 cscope.files
 cscope.out
+ccf_transaction_processor/test/infra
+ccf_transaction_processor/test/*.pem
+ccf_transaction_processor/generate_signing_keys/infra
+ccf_transaction_processor/generate_signing_keys/*.pem
